Add basic query

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "minio": "^7.0.25",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "@types/minio": "^7.0.11",
