--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.3",
     "minio": "^7.0.25",
     "next": "12.0.7",
