--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.3",
+    "lodash-es": "^4.17.21",
     "minio": "^7.0.25",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -20,6 +21,7 @@
     "swr": "^1.1.1"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.5",
     "@types/minio": "^7.0.11",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
